// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Component Rendering should contain a node content 1`] = `
<DocumentFragment>
  <div
    class="css-nr18n0"
  >
    <div>
      Node Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Title Component Rendering should render properly 1`] = `
<DocumentFragment>
  <div
    class="css-nr18n0"
  >
    Example Heading
  </div>
</DocumentFragment>
`;
